# calculator

./: .gitignore  README.md
calculator/: CMakeLists.txt  CMakeSettings.json
calculator/calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
calculator/calculator/src/: calculator.cpp  calculator.h  main.cpp  token.cpp  token.h
calculator/tests/: CMakeLists.txt
calculator/tests/src/: test_calculator.cpp
